[gd_scene load_steps=13 format=3 uid="uid://b5160bkvgqi5m"]

[ext_resource type="Script" path="res://scenes/mini_game/bedroom/scripts/bedroom_mini_game.gd" id="1_jkwiy"]
[ext_resource type="LabelSettings" uid="uid://c26seiibk78rc" path="res://scenes/mini_game/bedroom/res/bedroom_mini_game.tres" id="2_5lgdl"]

[sub_resource type="Animation" id="Animation_2vaax"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -30)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [-1.57413]
}

[sub_resource type="Animation" id="Animation_vvjvb"]
resource_name = "line1_run"
length = 3.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 2, 3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(163, -33), Vector2(0, -33), Vector2(400, -33), Vector2(163, -33)]
}

[sub_resource type="Animation" id="Animation_f8c5r"]
resource_name = "line1_show"
length = 1.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.6, 1.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, -30), Vector2(163, -33)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:rotation")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.9),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [-1.57413, 0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ma3x7"]
_data = {
"RESET": SubResource("Animation_2vaax"),
"line1_run": SubResource("Animation_vvjvb"),
"line1_show": SubResource("Animation_f8c5r")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_mxbit"]
size = Vector2(3, 324)

[sub_resource type="Animation" id="Animation_v2dr4"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(392, -44)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [-1.55829]
}

[sub_resource type="Animation" id="Animation_d3jlq"]
resource_name = "line2_run"
length = 3.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 2, 3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(212, -43), Vector2(400, -43), Vector2(0, -43), Vector2(212, -43)]
}

[sub_resource type="Animation" id="Animation_lswec"]
resource_name = "line2_show"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.9, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(392, -44), Vector2(212, -43)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:rotation")
tracks/1/interp = 4
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.5, 1.4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [-1.55829, 0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_jr84i"]
_data = {
"RESET": SubResource("Animation_v2dr4"),
"line2_run": SubResource("Animation_d3jlq"),
"line2_show": SubResource("Animation_lswec")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_lttr8"]
size = Vector2(3, 367)

[node name="BedroomMiniGame" type="CanvasLayer"]
layer = 2
script = ExtResource("1_jkwiy")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.470588)

[node name="Line1" type="ColorRect" parent="."]
offset_top = -30.0
offset_right = 0.999969
offset_bottom = 284.0
rotation = -1.57413

[node name="AnimationPlayer" type="AnimationPlayer" parent="Line1"]
speed_scale = 0.7
libraries = {
"": SubResource("AnimationLibrary_ma3x7")
}

[node name="Line1Area2D" type="Area2D" parent="Line1"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Line1/Line1Area2D"]
position = Vector2(0.5, 152)
shape = SubResource("RectangleShape2D_mxbit")

[node name="Line2" type="ColorRect" parent="."]
offset_left = 392.0
offset_top = -44.0
offset_right = 393.0
offset_bottom = 308.0
rotation = -1.55829
pivot_offset = Vector2(1, 348)

[node name="AnimationPlayer" type="AnimationPlayer" parent="Line2"]
libraries = {
"": SubResource("AnimationLibrary_jr84i")
}

[node name="Line2Area2D" type="Area2D" parent="Line2"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Line2/Line2Area2D"]
position = Vector2(0.5, 173.5)
shape = SubResource("RectangleShape2D_lttr8")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -49.0
offset_bottom = 40.0
grow_horizontal = 0

[node name="Label" type="Label" parent="Control"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0
text = "000"
label_settings = ExtResource("2_5lgdl")
horizontal_alignment = 1

[node name="Timer" type="Timer" parent="."]

[node name="Timer2" type="Timer" parent="."]
wait_time = 1.5

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="Timer2" to="." method="_on_timer_2_timeout"]
